--- a/.github/workflows/main_eshoponwebweb.yml
+++ b/.github/workflows/main_eshoponwebweb.yml
@@ -33,11 +33,14 @@ jobs:
       - name: Publish Web project
         run: dotnet publish src/Web/Web.csproj --configuration Release --no-build --output ${{ github.workspace }}/myapp # Wskazujemy konkretny projekt i ścieżkę wyjściową
 
+      - name: List published files
+        run: ls -lR ${{ github.workspace }}/myapp 
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app # Nazwa artefaktu (spakowanego wyniku publikacji)
-          path: ${{ github.workspace }}/myapp # Ścieżka do opublikowanej aplikacji
+          name: .net-app
+          path: ${{ github.workspace }}/myapp
 
   deploy:
     runs-on: ubuntu-latest
