--- a/.github/workflows/main_eshoponwebweb.yml
+++ b/.github/workflows/main_eshoponwebweb.yml
@@ -25,13 +25,13 @@ jobs:
 
       # --- Build Web Project ---
       - name: Restore Web dependencies
-        run: dotnet restore src/Web/Web.csproj # Wskazujemy konkretny projekt
+        run: dotnet restore src/Web/Web.csproj
 
       - name: Build Web project
-        run: dotnet build src/Web/Web.csproj --configuration Release --no-restore # Wskazujemy konkretny projekt i pomijamy restore
+        run: dotnet build src/Web/Web.csproj --configuration Release --no-restore
 
       - name: Publish Web project
-        run: dotnet publish src/Web/Web.csproj --configuration Release --no-build --output ${{ github.workspace }}/myapp # Wskazujemy konkretny projekt i ścieżkę wyjściową
+        run: dotnet publish src/Web/Web.csproj --configuration Release --no-build --output ${{ github.workspace }}/myapp
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,18 +41,18 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build # Ten job zależy od pomyślnego zakończenia joba 'build'
+    needs: build
 
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app # Pobieramy artefakt opublikowany w jobie 'build'
-          path: . # Pobieramy go do katalogu głównego joba 'deploy' (github.workspace)
+          name: .net-app
+          path: app_package
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -61,14 +61,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_424B88A6C56347F4B32914E7356D4F73 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4BFD0752534947EFB48E9C9F8F076738 }}
 
-      # --- Usunięta sekcja "Build & publish .NET app" ---
-      # Ta sekcja jest zbędna i błędna, ponieważ artefakt (.net-app) już zawiera opublikowane pliki.
-      # Nie ma potrzeby ponownie budować i publikować w jobie 'deploy'.
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'eShopOnWebWeb' # Twoja nazwa App Service
-          slot-name: 'staging' # Slot, na który wdrażasz
-          package: . # Ścieżka do opublikowanej aplikacji, która została pobrana jako artefakt do katalogu bieżącego joba
+          app-name: 'eShopOnWebWeb'
+          slot-name: 'staging'
+          package: app_package
