--- a/.github/workflows/main_eshoponwebweb.yml
+++ b/.github/workflows/main_eshoponwebweb.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Build Web project
         run: dotnet build src/Web/Web.csproj --configuration Release --no-restore
 
-      - name: Publish Web project
-        run: dotnet publish src/Web/Web.csproj --configuration Release --no-build --output ${{ github.workspace }}/myapp
-        
+      - name: Publish Web project (self-contained)
+        run: dotnet publish src/Web/Web.csproj --configuration Release --output ${{ github.workspace }}/myapp --runtime linux-x64 --self-contained true
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
